@@ -5,12 +5,10 @@ require 'observer'
 
 module Stella
   module Adapter
-    
-    # Stella::Adapter::ProxyWatcher
-    #
+
     # Starts up an HTTP proxy using WEBrick to record HTTP events. This is used
     # when PcapRecorder is not available. 
-    class ProxyWatcher
+    class Proxy
       include Observable
       
       attr_accessor :port
